# cavista-2026-team-lightx

./: .gitignore  LICENSE  README.md
fast-backend/: README.md  main.py  pyproject.toml  requirements.txt
fast-backend/models/: xgb_classifier_model.pkl
machine-learning/: README.md  model.py  notes.md  pyproject.toml  requirements.txt
machine-learning/output/: P_BIOPRO.csv  P_GLU.csv  combined_dataset.csv
machine-learning/output/model/: hypertension_model.json
machine-learning/vitals/: notes.md  train.py
machine-learning/vitals/output/: combined_dataset.csv
machine-learning/vitals/output/model/: feature_schema.json
mobile-app/light_x/: .env  README.md  pubspec.yaml
mobile-app/light_x/android/app/: build.gradle.kts
mobile-app/light_x/lib/: app.dart  main.dart  splash.dart
mobile-app/light_x/lib/core/apis/: api.dart  api_paths.dart  api_response.dart
mobile-app/light_x/lib/core/assets/: assets.dart  assets.gen.dart
mobile-app/light_x/lib/core/base/: base.dart
mobile-app/light_x/lib/core/constants/: constants.dart
mobile-app/light_x/lib/core/utils/: app_logger.dart  nav_utils.dart  result.dart  ui_utils.dart
mobile-app/light_x/lib/data/models/: health_model.dart
mobile-app/light_x/lib/routes/: app_router.dart  routes.dart
mobile-app/light_x/lib/routes/src/: ai_chat_routes.dart  main_routes.dart  onboarding.dart  onboarding_routes.dart  pricing_route.dart  scan_routes.dart  splash_route.dart
mobile-app/light_x/lib/shared/helpers/: formatter.dart
mobile-app/light_x/test/: widget_test.dart
(+120 files in other folders)
